--- a/design/style.css
+++ b/design/style.css
@@ -456,13 +456,13 @@ section .projetos {
     }
 
 
-    .menu-toggle .one{
+    .menu-section.on.menu-toggle .one{
         transform: rotate(45deg) translate(7px, 7px);
     }
-    .menu-toggle .two{
+    .menu-section.on.menu-toggle .two{
         opacity: 0;
     }
-    .menu-toggle .three{
+    .menu-section.on.menu-toggle .three{
         transform: rotate(-45deg) translate(8px, -9px);
     }
 
