--- a/design/css/navbar.css
+++ b/design/css/navbar.css
@@ -5,10 +5,9 @@
     background-color: rgb(0, 0, 0);
     position: fixed;
 
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     display: flex;
-
 }
 
 nav {
@@ -21,14 +20,13 @@ nav {
 
     padding: 2rem;
     margin: 0;
-
-
 }
 
 nav .nav-items {
     display: flex;
     justify-content: center;
     list-style: none;
+    transition: 0.3s all;
 }
 
 nav .nav-items .nav-item .nav-link {
@@ -47,8 +45,7 @@ nav .nav-items .nav-item .nav-link {
     font-family: 'Prompt';
     font-weight: 700;
 
-    margin: 3rem;
-    margin-right: 1.6rem;
+    margin-right: 6rem;
 
     word-wrap: break-word;
     float: left;
@@ -97,4 +94,23 @@ nav .nav-items .nav-item .nav-link:hover::after {
     position: absolute;
 }
 
+/*LINKS E ICONES*/
 
+.icone {
+    background-color: #ffffff;
+    border-radius: 100%;
+    border: solid 1.5px #eb6969;
+
+    max-height: 35px;
+    max-width: 35px;
+
+    cursor: pointer;
+    transition: all 0.2s;
+
+    margin-right: 2rem;
+    margin-top: 10px;
+}
+
+.icone:hover {
+    transform: scale(1.1);
+}
