--- a/design/css/index.css
+++ b/design/css/index.css
@@ -82,13 +82,13 @@ section.titulo-chamativo {
     font-family: 'Bebas Neue', cursive;
 }
 .destaque-vermelho{
-    color: #ff0000;
-    letter-spacing: 0.2rem;
+    color: #eb6969;
+    letter-spacing: 0.5rem;
     text-shadow:
-      -1px -1px 2px #000,
-      1px -1px  2px #000,
-      -1px 1px  2px #000,
-      1px 1px  2px #000;
+      -1px -1px  #fff,
+      1px -1px   #fff,
+      -1px 1px   #fff,
+      1px 1px  #fff;
 
 }
 
