--- a/design/css/index.css
+++ b/design/css/index.css
@@ -1,8 +1,16 @@
+/* FONTS GOOGLE */
 @import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@400;700&family=Audiowide&family=Bebas+Neue&family=Itim&family=Josefin+Sans:wght@600&family=Prompt:wght@500;600;700;800;900&display=swap');
+
+/* LINKS CSS */
 @import url(./projects.css);
+@import url(./home.css);
+@import url(./sobre_mim.css);
 @import url(./navbar.css);
+
+/* RESPONSIVIDADE */
 @import url(./responsivo/mobileNav.css);
 @import url(./responsivo/mobProjSection.css);
+@import url(./responsivo/menuResponsivo.css);
 
 /* 
 font-family: 'Alkatra', cursive;
@@ -42,231 +50,3 @@ body {
 }
 
 
-section.titulo-chamativo {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-
-    font-family: 'Audiowide', cursive;
-    font-weight: 700;
-    
-    width: 100%;
-    height: 100vh;
-}
-
-.titulo-chamativo h1, h4, h5{
-    z-index: -1;
-    margin-top: 1rem;
-    position: relative;
-
-    color: #000;
-    letter-spacing: 0.2rem;
-    text-shadow: 
-    -1px -1px 1px #eb6969,
-    1px -1px 1px #eb6969,
-    -1px 1px 1px #eb6969,
-    1px 1px 1px #eb6969;
-
-}
-
-.titulo-chamativo h1{
-    font-size: 7rem;
-    text-align: center;
-}
-
-.titulo-chamativo h4{
-    color: #000000;
-    font-size: 2.5rem;
-    letter-spacing: 0.5rem;
-    font-family: 'Bebas Neue', cursive;
-}
-.destaque-vermelho{
-    letter-spacing: 0.5rem;
-
-}
-
-.profissao {
-
-    color: rgb(255, 255, 255);
-    font-size: 3rem;
-    font-family: 'Itim', cursive;
-
-    letter-spacing: 0.2rem;
-
-    padding: 2rem;
-
-
-    /* Define a ordem de sobreposição do elemento filho */
-
-}
-
-/*SOBRE MIM HABILIDADES HISTORICO SLA*/
-
-.sobre-mim {
-    display: flex;
-    align-items: center;
-
-    width: 100%;
-    height: 100vh;
-
-    margin-bottom: 10%;
-
-}
-
-.copwrite {
-    font-family: 'Prompt';
-    width: 50%;
-
-    margin-top: 5rem;
-    margin-left: 8vw;
-}
-
-.text-inicial {
-    max-width: 498px;
-    color: #fff;
-    font-size: 2rem;
-    margin-bottom: 2rem;
-
-    float: left;
-}
-
-
-@media(max-width:900px) {
-    .copwrite {
-        width: 80%;
-    }
-
-    .sobre-mim {
-        flex-direction: column;
-    }
-
-    .contacts {
-        margin: 3rem;
-    }
-
-    .projetos {
-        margin-top: 60rem !important;
-    }
-
-    main hr {
-        position: absolute;
-        width: 100%;
-    }
-}
-
-@media (max-width:765px) {
-
-    .container-header {
-        width: 100%;
-        height: 10vh;
-
-        padding: 0 0 0 2rem;
-        align-items: center;
-
-        position: fixed;
-        top: 0;
-        left: 0;
-
-        background-color: #000000;
-    }
-
-    nav {
-        align-items: center;
-        display: none;
-    }
-
-    .nav-items {
-
-        margin-top: 5rem;
-        flex-direction: column;
-
-
-    }
-
-    .nav-link {
-        color: white;
-    }
-
-    .nav-link:hover {
-        color: #fdfdfd !important;
-    }
-
-    .titulo-chamativo{
-        text-align: center;
-    }
-
-    .copwrite {
-        min-width: 90%;
-    }
-
-    .row-container {
-        flex-direction: column;
-    }
-
-    .titulo-projetos {
-        font-size: 4rem;
-        letter-spacing: 1.5rem;
-    }
-
-    /*fullscreen*/
-
-    .menu-section.on {
-        transition-duration: 0.3s;
-
-        position: fixed;
-        top: 0;
-        left: 0;
-
-        width: 100%;
-        height: 100%;
-
-        z-index: 11;
-
-        background: rgb(81, 18, 25);
-        background: linear-gradient(0deg, rgba(81, 18, 25, 1) 0%, rgba(0, 0, 0, 1) 84%);
-        
-    }
-
-
-    .menu-section.on nav {
-        display: block;
-    }
-
-    .menu-section .menu-toggle {
-        display: block;
-    }
-
-    .menu-section.on .menu-toggle {
-        margin-right: 60px;
-    }
-
-
-    .menu-section.on .menu-toggle .one {
-        transform: rotate(45deg) translate(7px, 7px);
-    }
-
-    .menu-section.on .menu-toggle .two {
-        opacity: 0;
-    }
-
-    .menu-section.on .menu-toggle .three {
-        transform: rotate(-45deg) translate(8px, -9px);
-    }
-
-
-
-}
-
-
-@media(max-width:430px) {
-
-    .titulo-chamativo h1{
-        font-size: 40px;
-        margin-bottom: 2rem;
-    }
-    .copwrite {
-        text-align: center;
-        margin: 1rem 0;
-    }
-
-}
