--- a/design/css/home.css
+++ b/design/css/home.css
@@ -1,5 +1,5 @@
 
-/* HOME */
+
 section.titulo-chamativo {
     display: flex;
     justify-content: center;
@@ -10,6 +10,8 @@ section.titulo-chamativo {
     
     width: 100%;
     height: 100vh;
+    border-bottom: 1px solid #fff;
+        
 }
 
 .titulo-chamativo h1, h4, h5{
