--- a/design/css/navbar.css
+++ b/design/css/navbar.css
@@ -1,4 +1,4 @@
-@import url('icones.css');
-@import url('toogle.css');
-@import url('nav.css');
+@import url('./icones.css');
+@import url('./toogle.css');
+@import url('./nav.css');
 
