--- a/design/css/sobre_mim.css
+++ b/design/css/sobre_mim.css
@@ -4,9 +4,9 @@
 
 .sobre-mim {
     display: flex;
+    flex-direction: column;
 
     width: 100%;
-    height: 100vh;
 
     margin-bottom: 10%;
 
@@ -15,8 +15,12 @@
 }
 
 
-
-.sobre-mim .copwrite {
+.sobre-mim .apresentacao{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.sobre-mim .apresentacao .copwrite {
     font-family: 'Prompt';
     width: 50%;
 
@@ -24,7 +28,7 @@
     margin-left: 8vw;
 }
 
-.sobre-mim .copwrite h1{
+.sobre-mim  h1{
      
     color: #eb6969;
     text-decoration: none;
@@ -48,7 +52,7 @@
     font-size: 2rem;
     margin-bottom: 2rem;
 
-    float: left;
+
 }
 
 .foto{
@@ -58,4 +62,30 @@
 .foto  img{
     border-radius: 100%;
     width: 85%;
+}
+
+
+.soft-skills{
+
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10rem;
+    width: 100%;
+
+}
+
+.soft-skills .cards{
+    width: 87%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+.soft-skills .card{
+    max-width: 300px;
+    width: 300px;
+    height: 100px;
+    border: 1px solid #fff;
+    color: #fff; 
+    border-radius: 5px;
 }
