--- a/design/css/projects.css
+++ b/design/css/projects.css
@@ -16,7 +16,7 @@ section .projetos {
 }
 
 .titulo-projetos {
-    color: #0dff00;
+    color: #eb6969;
     text-transform: uppercase;
 
 
@@ -56,7 +56,7 @@ section .projetos {
     background-color: rgb(255, 255, 255);
 
     font-family: 'Signika', sans-serif;
-    color: #0dff00;
+    color: #eb6969;
 
     margin: 1rem;
     width: 100%;
@@ -79,7 +79,7 @@ section .projetos {
 
 .item-card:hover {
     box-shadow: none;
-    border: solid #0dff00 2px;
+    border: solid #eb6969 2px;
 }
 
 
