Separando o arquivo sobreMim.css

--- a/design/css/index.css
+++ b/design/css/index.css
@@ -4,7 +4,7 @@
 /* LINKS CSS */
 @import url(./projects.css);
 @import url(./home.css);
-@import url(./sobre_mim.css);
+@import url(./sobreMim.css);
 @import url(./icones.css);
 @import url(./navbar.css);
 
