--- a/design/css/nav.css
+++ b/design/css/nav.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     display: flex;
+    z-index: 1000;
 }
 
 nav {
@@ -20,6 +21,7 @@ nav {
 
     padding: 2rem;
     margin: 0;
+    
 }
 
 nav .nav-items {
