--- a/design/css/projects.css
+++ b/design/css/projects.css
@@ -62,7 +62,7 @@
     width: 35%;
     height: 500px;
 
-    cursor: pointer;
+    
 
 
 
@@ -80,7 +80,7 @@
 }
 
 .item-card-destaque:hover {
-    opacity: .5;
+    background-color: rgba(255, 255, 255, 0.5);
     transform: scale(1.05);
     z-index: 1;
 
@@ -107,7 +107,15 @@
     font-size: 15px;
     margin-top: 3rem;
     z-index: 2;
+    cursor: pointer;
     
+}
+
+
+.item-card-destaque .btn-more:hover {
+  background-color: #fff;
+  border: #eb6969 3px solid;
+  color: #eb6969;
 
 }
 
