--- a/design/css/projects.css
+++ b/design/css/projects.css
@@ -34,6 +34,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: wrap;
 
 }
 
@@ -133,4 +134,30 @@
     font-size: 30px;
     color: #fff;
     font-family: 'Prompt';
+}
+
+.item-card-todos{
+    margin-top: 10rem;
+    width: 20%;
+    height: 200px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1rem;
+    font-size: 20px;
+    border-radius: 0px 15px 0px 15px;
+    border-left: 2px solid #eb6969;
+    text-transform: uppercase;
+    color: #303030;
+    font-family: 'Prompt';
+    transition: .2s all ease-in-out;
+}
+
+.item-card-todos:hover{
+   opacity: .5;
+}
+
+.wrap{
+    flex-wrap: wrap;
 }
