--- a/design/css/hardSkills.css
+++ b/design/css/hardSkills.css
@@ -4,12 +4,13 @@
 
 
 .hard-skills {
-    margin-top: 17rem;
+    margin-top: 8rem;
     width: 90%;
 }
 
 .hard-skills h1{
-    margin-left: 4rem;
+    /* margin-left: 4rem; */
+    text-align: center;
 }
 
 .hard-skills .icons-skill{
@@ -18,13 +19,15 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    max-width: 1200px;
+    width: 300px;
 }
 
 
 .hard-skills .icons-skill .icon-skill{
     width: 120px;
     height: 120px;
-    background-color: #fff;
+    background-color: #202020;
 
     display: flex;
     align-items: center;
@@ -37,10 +40,12 @@
     font-size: 15px;
     font-family: 'Prompt';
     transition: .2s all ease-in-out;
+
+    margin-bottom: 2rem;
 }
 
 .hard-skills .icons-skill .icon-skill .titulo-icon{
-    color: #202020;
+    color: #fff;
 }
 
 .hard-skills .icons-skill .icon-skill i{
