--- a/design/css/home.css
+++ b/design/css/home.css
@@ -10,7 +10,7 @@ section.titulo-chamativo {
     
     width: 100%;
     height: 100vh;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #303030;
         
 }
 
@@ -19,13 +19,13 @@ section.titulo-chamativo {
     margin-top: 1rem;
     position: relative;
 
-    color: #000;
+    color: #101010;
     letter-spacing: 0.2rem;
     text-shadow: 
-    -1px -1px 1px #eb6969,
-    1px -1px 1px #eb6969,
-    -1px 1px 1px #eb6969,
-    1px 1px 1px #eb6969;
+    -2px -2px 1px #eb6969,
+    2px -2px 1px #eb6969,
+    -2px 2px 1px #eb6969,
+    2px 2px 1px #eb6969;
 
 }
 
@@ -38,7 +38,7 @@ section.titulo-chamativo {
 }
 
 .titulo-chamativo h4{
-    color: #000000;
+    color: #101010;
     font-size: 2.5rem;
     letter-spacing: 0.5rem;
     font-family: 'Bebas Neue', cursive;
