--- a/design/css/nav.css
+++ b/design/css/nav.css
@@ -2,12 +2,14 @@
 .container-header {
     width: 100%;
     height: 8vh;
-    background-color: rgb(0, 0, 0);
+
+    background-color: #202020;
     position: fixed;
 
     justify-content: space-between;
     align-items: center;
     display: flex;
+
     z-index: 1000;
 }
 
