--- a/design/css/responsivo/mobProjSection.css
+++ b/design/css/responsivo/mobProjSection.css
@@ -1,11 +1,15 @@
-@media(max-width:900px) {
-    .projetos {
-        margin-top: 60rem !important;
+@media(max-width:1200px) {
+    .item-card-destaque {
+
+       
+        width: 50%;
+       
+    
     }
 
-}
+}  
 
-@media (max-width:765px) {
+/* @media (max-width:800px) {
 
     .row-container {
         flex-direction: column;
@@ -16,11 +20,11 @@
         letter-spacing: 1.5rem;
     }
 
-}
-
+} */
+/* 
 @media(max-width:430px) {   
     .titulo-projetos {
         letter-spacing: 1rem;
     }
 
-}
+}  */ 
