Alterando a responsividade do hardSkills

--- a/design/css/index.css
+++ b/design/css/index.css
@@ -12,6 +12,9 @@
 @import url(./responsivo/mobileNav.css);
 @import url(./responsivo/mobProjSection.css);
 @import url(./responsivo/menuResponsivo.css);
+@import url(./responsivo/mobSobreMim.css);
+
+
 
 /* 
 font-family: 'Alkatra', cursive;
