Deixando a section de projetos responsiva

--- a/design/css/hardSkills.css
+++ b/design/css/hardSkills.css
@@ -11,6 +11,7 @@
 .hard-skills h1{
     /* margin-left: 4rem; */
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .hard-skills .icons-skill{
