--- a/design/css/responsivo/menuResponsivo.css
+++ b/design/css/responsivo/menuResponsivo.css
@@ -75,7 +75,7 @@
 
     .titulo-projetos {
         font-size: 4rem;
-        letter-spacing: 1.5rem;
+        letter-spacing: .4rem;
     }
 
     /*fullscreen*/
