--- a/design/css/projects.css
+++ b/design/css/projects.css
@@ -10,6 +10,8 @@
 
     border-top: solid #fff 2px;
 
+    margin-top: 10rem;
+
 
 }
 
@@ -32,7 +34,6 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    flex-wrap: wrap;
 
 }
 
@@ -40,10 +41,11 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    
+
 
     width: 100%;
     height: 100%;
+    flex-wrap: wrap;
 
     padding: 1rem;
 
@@ -59,8 +61,10 @@
     color: #eb6969;
 
     margin: 1rem;
-    width: 40%;
-    flex-wrap: wrap;
+
+    max-width: 100%;
+    min-width: 250px;
+    width: 20%;
     height: 500px;
 
     display: flex;
@@ -133,6 +137,7 @@
 .item-card-todos{
     width: 70%;
     height: 200px;
+    
     background-color: #303030;
     display: flex;
     align-items: center;
