--- a/design/css/responsivo/mobProjSection.css
+++ b/design/css/responsivo/mobProjSection.css
@@ -1,26 +1,21 @@
-@media(max-width:960px) {
+@media(max-width:1120px) {
     .item-card-destaque {
-        max-width: 50%;
+        width: 35%;
     }
 
 }  
 
-/* @media (max-width:800px) {
+@media (max-width:800px) {
 
-    .row-container {
-        flex-direction: column;
+    .item-card-destaque {
+        width: 60%;
     }
 
-    .titulo-projetos {
-        font-size: 4rem;
-        letter-spacing: 1.5rem;
-    }
-
-} */
+} 
 /* 
 @media(max-width:430px) {   
     .titulo-projetos {
         letter-spacing: 1rem;
     }
 
-}  */ 
+}  */
