--- a/design/css/hardSkills.css
+++ b/design/css/hardSkills.css
@@ -4,8 +4,9 @@
 
 
 .hard-skills {
-    margin-top: 10rem;
     width: 90%;
+    padding: 15rem 0rem 15rem 0rem;
+    border-bottom: 1px solid #303030;
 }
 
 .hard-skills h1{
@@ -29,7 +30,7 @@
 .hard-skills .icons-skill .icon-skill{
     width: 120px;
     height: 120px;
-    background-color: #202020;
+    background-color: #303030;
 
     display: flex;
     align-items: center;
